# tvm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.py  test_Alexnet.py  test_densenet.py  test_inception.py  test_nnpu.py  test_resnet.py  test_vgg.py  testss.py
MLIR-TVM/Ch8/: MLIR-TVM-Demo简介.docx
cmake/modules/contrib/: NNPU.cmake
include/tvm/: ir_pass.h  target_info.h
include/tvm/runtime/: c_runtime_api.h  device_api.h
nnpu/config/: micro_code_template.txt  nnpu_config.yaml
nnpu/demos/: test_activation.py  test_conv.1.py  test_conv.2.py  test_conv_pool_fused.py  test_copy.py  test_fully_connected.py  test_poolingmax.py  test_poolingmean.py
nnpu/include/nnpu/: driver.h  insn.h  runtime.h
nnpu/python/nnpu/: __init__.py  build_module.py  environment.py  helper.py  intrins.py  ir_pass.py  libinfo.py  utils.py
nnpu/python/nnpu/top/: __init__.py  nn.py
nnpu/src/: device_api.cpp  insn.cpp  insn_ctors.cpp  runtime.cpp  sim_driver.cpp
nnpu/tests/: gemm-config.py  test-splitter.py  test.py  test_Imm.py  test_activation.py  test_batch_mreduce.py  test_batch_reduce.py  test_big_vctr.py  test_bigvctr.py  test_conv.1.py  test_conv.py  test_copy.py  test_dot_prod.py  test_fully_connected.py  test_gemm.1.py  test_gemm.py  test_gemm_acc.py  test_gemm_read_delay.py  test_ir_pass.py  test_mat_binary.py  test_mat_reduce.py  test_mat_row_dot.py  test_mat_vctr.py  test_matimm.py  test_multi.py  test_multi_core.py  test_nms.py  test_padding.py  test_pooling.py  test_poolingmax.py  test_poolingmean.py  test_precision_dec.py  test_reduce.py  test_rnn.py  test_s_v_r.py  test_vctr_binary.py  test_vctr_sclr.py
nnpu/tests/article_demos/: conv-config.1.py  conv-config.py  conv-davinci.py  dense-demo.py  gemm-config-with-l1.py  gemm-config.py  gemm-davinci.py  gemm-opt.py  gemm-original.py  im2col-CPU.py  im2col.py  maxpool-config.py  maxpool-davinci.py  nnpu_config-dense.yaml  nnpu_config-opt.yaml  nnpu_config.0.yaml  nnpu_config.2.yaml  nnpu_config.3.yaml  nnpu_config.4.yaml  nnpu_config.davinci.yaml  nnpu_config.l1.yaml
nnpu/tests/cpp/: CMakeLists.txt  test_main.cpp
nnpu/tests/insn_test/: nnpu_config_fp32.yaml  nnpu_config_gemm.yaml  test-gemm.py  test_Imm.py  test_activation.py  test_mat_vctr.py  test_matrix_reduce.py  test_reduce.py  test_vctr_binary.py  test_vctr_sclr.py
nnpu/tests/s0cpp/: CMakeLists.txt  test_main.cpp
nnpu/tests/test_insns/: test_dot_prod.py  test_gemm_read_delay.py  test_mat_binary.1.py  test_mat_row_dot.py  test_matimm.py  test_matrix_reduce.py  test_multi.py  test_multi_core.py  test_padding.py  test_precision_dec.py  test_roi_pooling.py  test_s_v_r.py  test_vctr_binary.py  test_vctr_sclr.py
nnpu/tests/test_speed/: test-gemm-small-batch-Nz.py  test-gemm-small-batch.py  test1.py  test2.py  test3.py
nnpu/tests/test_strided/: test_strided_gemm.py  test_strided_gemm2.py  test_strided_mat_binary.py  test_strided_mat_reduce.py  test_strided_mat_row_dot.py  test_strided_mat_vctr.py
nnpu/tests/test_tiled/: test_tiled_gemm.py
nnvm/python/nnvm/testing/: __init__.py
nnvm/python/nnvm/top/: nn.py
python/tvm/: __init__.py  build_module.py  intrin.py  ndarray.py  target.py
python/tvm/_ffi/: runtime_ctypes.py
python/tvm/autotvm/: tophub.py
python/tvm/rpc/: client.py
src/api/: api_pass.cc
src/arithmetic/: split_expr.cc  split_expr.h
src/codegen/: build_module.cc
src/codegen/llvm/: codegen_nnpu.cc  extract_micro_code.cc  extract_micro_code.h  llvm_common.cc  llvm_common.h
src/op/: tensorize.cc
src/pass/: split_host_nnpu_device.cc  storage_access.cc  storage_flatten.cc
src/runtime/: c_runtime_api.cc  thread_storage_scope.h
src/runtime/nnpu/: nnpu_module.cc  nnpu_module.h
src/schedule/: schedule_lang.cc
tests/python/: test.py
topi/python/topi/: cpp.py
topi/python/topi/cuda/: dense.py
vta/python/vta/: build_module.py
算子加速项目/手工调优算子源码/convolution/: opt_conv_cuda.py
算子加速项目/手工调优算子源码/deconvolution/: test_op_grad_level2.py
算子加速项目/手工调优算子源码/dense/: opt_gemm_gpu.py
算子加速项目/手工调优算子源码/elementwise-addprod/: opt_vectoradd.py
算子加速项目/手工调优算子源码/maxpoolgrad/: tune_maxpoolgrad_gpu.py
算子加速项目/搜索算法源码/LGB/: LGB_tuner.py
算子加速项目/搜索算法源码/hc(爬山法)/: hc_tuner.py
算子加速项目/自动调优算子源码及数据/convolution/: test_conv2d.py
算子加速项目/自动调优算子源码及数据/deconvolution/: test_conv2d_transpose.py
算子加速项目/自动调优算子源码及数据/dense/: test_dense.py  test_gemm.py
算子加速项目/自动调优算子源码及数据/elementwise-addprod/: tune_vectoradd_gpu.py  tune_vectormul_gpu.py
算子加速项目/自动调优算子源码及数据/maxpoolgrad/: tune_max_pool_grad.py
算子加速项目/自动调优网络源码及数据/: tune_relay_cuda.py  实验记录
